added compile time parameters

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -2,6 +2,13 @@
 self-url = localhost
 service-port = 9876 
 service-host = localhost
-default-shock-server = http://localhost:7078
-default-awe-server = http://localhost:7080
 
+# these are build time config settings
+aweurl    =  http://140.221.67.190:7080
+shockurl  =  http://140.221.67.190:7078
+
+# these are mosaik specific parameters
+annpe          = /kb/runtime/bin/2.1.78.pe.ann
+annse          = /kb/runtime/bin/2.1.78.se.ann
+mthreads       = 6
+mref_db        = /mnt/reference/mosaik
