added p3_dataurl parameter

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -6,6 +6,7 @@ service-host = localhost
 # these are build time config settings
 aweurl    =  http://140.221.67.190:7080
 shockurl  =  http://140.221.67.190:7078
+p3_dataurl = https://www.patricbrc.org/api
 
 # these are mosaik specific parameters
 annpe          = /kb/runtime/bin/2.1.78.pe.ann
